--- a/day2.css
+++ b/day2.css
@@ -52,7 +52,7 @@ h1{font-family: fantasy;}
 	border-radius: 10px;
 	display: block;
 	/*visibility: hidden;*/
-	display: none;
+	/*display: none;*/
 }
 
 .happy {
